src/objects/SFDC_Projects__c.object
<CustomObject>
    <description>A professional services engagement that tracks all related Resources and Project details.</description>
    <fields>
        <fullName>Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acquired_Courtesy_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acquired Courtesy Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asked_client_for_login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked client for login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition_1_Type__c</fullName>
        <label>Condition 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Accounts &amp; Contacts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Custom Objects</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Leads &amp; Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_1__c</fullName>
        <label>Condition 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_2_Type__c</fullName>
        <label>Condition 2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Accounts &amp; Contacts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Custom Objects</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Leads &amp; Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_2__c</fullName>
        <label>Condition 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_3_Type__c</fullName>
        <label>Condition 3 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Accounts &amp; Contacts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases &amp; Solutions</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Custom Objects</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Leads &amp; Opportunities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_3__c</fullName>
        <label>Condition 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Objects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboards__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dashboards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TE</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finished_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_PE_Mkt_Licenses__c</fullName>
        <label>If PE, # Mkt Licenses</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_PE_other_add_ons__c</fullName>
        <label>If PE, other add-ons</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label># Licenses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loaded_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loaded Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_10__c</fullName>
        <label>Note 10</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_11__c</fullName>
        <label>Note 11</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_12__c</fullName>
        <label>Note 12</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <label>Notes 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Notes 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_travel_expected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite travel expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N60000001VqqUEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outlook_Edition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outlook Edition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_BPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed BPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_Kickoff_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed Kickoff Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open for offers</fullName>
                </value>
                <value>
                    <fullName>Evaluating offers</fullName>
                </value>
                <value>
                    <fullName>Live - Design</fullName>
                </value>
                <value>
                    <fullName>Live - Implemented</fullName>
                </value>
                <value>
                    <fullName>Completed &amp; Accepted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QSA</fullName>
                </value>
                <value>
                    <fullName>QSO</fullName>
                </value>
                <value>
                    <fullName>QSI</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Questionnaire_back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Questionnaire back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_BPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled BPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Kickoff_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Kickoff Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Service_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Intro_Email_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Intro Email/Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Factors__c</fullName>
        <label>Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Integration_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Integration Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_to_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-to-Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_to_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web-to-Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sForce_Controls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sForce Controls</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AllProjects</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>ProjectsOpenforOffers</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Edition__c</columns>
        <columns>Licenses__c</columns>
        <columns>Amount__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>contains</operation>
            <value>open</value>
        </filters>
        <label>Projects Open for Offers</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>